道路link名称编辑、形态编辑bug修改

--- a/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
@@ -4,7 +4,7 @@
     <ul  class="list-group list-group-lg m-b-none" style="margin-bottom: 5px">
         <li class="list-group-item">
             <div><label class="control-label">名称组号</label></div>
-            <div class="inline"><input type="text" ng-model="oridiData.nameGroupid" disabled/></div>
+            <div class="inline"><input type="text" ng-model="oridiData.nameGroupid" disabled class="chosen-disabled"/></div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">道路名称</label></div>
@@ -14,11 +14,9 @@
                         ng-click="searchGroupidByNames($index)">
                 </span>
             </div>
-        </li>
-        <li class="list-group-item" id="name" style="display: none;width: 95%;">
-            <div class="pic-show">
+            <div class="pic-show" style="min-width: 260px;max-width: 260px;position: fixed;display: none;">
                 <div class="option-hide">
-                        <span aria-hidden="true" class="glyphicon glyphicon-remove-sign" ng-click="hidePicSelect($event)"></span>
+                    <span aria-hidden="true" class="glyphicon glyphicon-remove-sign" ng-click="hidePicSelect($event)"></span>
                 </div>
                 <div class="pic-show-well">
                     <div class="img-well" ng-repeat="nitem in pictures"
@@ -55,15 +53,15 @@
             <div><label class="control-label" >名称分类</label></div>
             <div class="radio inline" style="text-align: left">
                 <label>
-                    <input type="radio" name="originOfName" value=1 ng-model="oridiData.nameClass">
+                    <input type="radio" name="originOfName" value=1 ng-model="oridiData.nameClass" ng-change="nameClassChange()">
                     官方
                 </label>
                 <label>
-                    <input type="radio" name="originOfName" value=2 ng-model="oridiData.nameClass">
+                    <input type="radio" name="originOfName" value=2 ng-model="oridiData.nameClass" ng-change="nameClassChange()">
                     别名
                 </label>
                 <label>
-                    <input type="radio" name="originOfName" value=3 ng-model="oridiData.nameClass">
+                    <input type="radio" name="originOfName" value=3 ng-model="oridiData.nameClass" ng-change="nameClassChange()">
                     曾用
                 </label>
             </div>
@@ -71,21 +69,21 @@
         <li class="list-group-item">
             <div><label class="control-label">名称序号</label></div>
             <div class="inline">
-            	<input type="text" ng-model="oridiData.seqNum"/>
+                <input type="text" ng-model="oridiData.seqNum" disabled class="chosen-disabled"/>
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">名称类型</label></div>
             <div class="inline">
-            	<select  ng-model="oridiData.nameType"
-                        ng-options="value.id as value.label for value in nameTypeOptions" ng-class="chosen-disable" disabled>
+            	<select ng-model="oridiData.nameType"
+                        ng-options="value.id as value.label for value in nameTypeOptions">
                 </select>
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">名称来源</label></div>
             <div class="inline">
-                <select  ng-model="oridiData.srcFlag"
+                <select ng-model="oridiData.srcFlag"
                         ng-options="value.id as value.label for value in srcFlagOptions">
                 </select>
             </div>
@@ -93,7 +91,7 @@
         <li class="list-group-item">
             <div><label class="control-label">路线属性</label></div>
             <div class="inline">
-                <select  ng-model="oridiData.routeAtt"
+                <select ng-model="oridiData.routeAtt"
                         ng-options="value.id as value.label for value in routeAttOptions">
                 </select>
             </div>
@@ -113,7 +111,9 @@
         </li>
         <li class="list-group-item">
             <div><label class="control-label">录入时间</label></div>
-            <div class="inline"><input type="text" ng-model="oridiData.inputTime" disabled/></div>
+            <div class="inline">
+                <input type="text" ng-model="oridiData.inputTime" ng-disabled="oridiData.nameClass!=3" ng-class="{'chosen-disabled':oridiData.nameClass!=3}"/>
+            </div>
         </li>
     </ul>
     </form>
