--- a/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
@@ -1,3 +1,8 @@
+<style>
+    form[name=rdLaneConnexityForm] ul.fm-ul-form > li > div{
+        width: inherit;
+    }
+</style>
 <div ng-controller="rdLaneConnexityController" class="fm-component" oncontextmenu="self.event.returnValue=false">
     <div class="title">
         车信PID
