linkform保存报错的问题 优化了compareJson方法

--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -90,7 +90,7 @@
     <button class="fm-top-btn blank" title="制作路口" ng-controller="addRdRelationCtrl" ng-click="addShape('RDCROSS')">路</button>
     <button class="fm-top-btn blank" title="制作车信" ng-controller="addRdRelationCtrl" ng-click="addShape('RDLANECONNEXITY')">车</button>
     <button class="fm-top-btn blank" title="制作交限" ng-controller="addRdRelationCtrl" ng-click="addShape('RDRESTRICTION')">限</button>
-    <button class="fm-top-btn blank" title="制作分叉口" ng-controller="addRdRelationCtrl" ng-click="addShape('RDSE')">分</button>
+    <button class="fm-top-btn blank" title="制作信号灯" ng-controller="addRdRelationCtrl" ng-click="addShape('TRAFFIC_SIGNAL')">灯</button>
     <button class="fm-top-btn blank" title="制作顺行" ng-controller="addRdRelationCtrl" ng-click="addShape('RDDIRECTROUTE')">顺</button>
     <button class="fm-top-btn blank" title="制作限速" ng-controller="addRdRelationCtrl" ng-click="addShape('RDSPEEDLIMIT')">速</button>
     <button class="fm-top-btn blank" title="制作立交" ng-controller="addRdRelationCtrl" ng-click="addShape('RDGSC')">立</button>
