--- a/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
@@ -67,7 +67,7 @@
                             <td colspan="5" class="text-center">无数据!!!</td>
                         </tr>
                         <tr ng-class-odd="'tableOdd'" ng-repeat="item in searchBoxData[currentBoxIndex].rules">
-                            <td><input ng-model="item.checked" ng-change="aa()" type="checkbox" /></td>
+                            <td><input ng-model="item.checked" type="checkbox" /></td>
                             <td title="{{item.ruleName}}" class="itemName">{{item.ruleName.length>12?item.ruleName.substr(0,12)+'...':item.ruleName}}</td>
                             <td title="{{item.ruleDesc}}">{{item.ruleDesc.length>42?item.ruleDesc.substr(0,42)+'...':item.ruleDesc}}</td>
                             <td>{{item.ruleLevel}}</td>
