解决创建车信时普通、公交箭头没对齐bug

--- a/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/addLaneconnexityTpl.html
+++ b/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/addLaneconnexityTpl.html
@@ -68,7 +68,7 @@
 </style>
 
 <div ng-controller="addLaneConnexityController" class="panel panel-default" id="laneConneexityDiv"
-     oncontextmenu="self.event.returnValue=false">
+     oncontextmenu="self.event.returnValue=false" style="margin-top: 27px;border: 0;">
     <ul class="fm-ul fm-ul-form">
         <li >
             <label class="control-label" style="font-size: 12px;width: 100%">创建车信</label>
