解决创建车信时普通、公交箭头没对齐bug

--- a/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/addLaneconnexityTpl.html
+++ b/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/addLaneconnexityTpl.html
@@ -99,7 +99,7 @@
         <li >
             <div style="padding-top: 15px;width: auto;min-width: 0px"
                  ng-repeat="busItem in directData.showTransitData track by $index">
-                <div>
+                <div style="width:37px;height:35px;">
                        <span ng-if="busItem.flag!=='test'"
                              style=" float: right;font-size: 12px;top: 0px;margin-top: -10px;
                                      margin-left:-5px;color: #fff;cursor: pointer;"
