--- a/less/editor.less
+++ b/less/editor.less
@@ -2536,29 +2536,29 @@ input[type="range"]::-webkit-slider-thumb {
   -ms-transition: all 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
   -o-transition: all 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
   transition: all 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+  label{
+    color:#aab8c2;
+    font-weight:600;
+    font-size:12px;
+    text-align:center;
+    margin:15px 0;
+    width:290px;
+    display:block;
+  }
+  div.message{
+    padding:0 0 30px 58px;
+    clear:both;
+    margin-bottom:45px;
+  }
+  div.message.right{
+    padding: 0 58px 30px 0;
+    margin-right: -19px;
+    margin-left: 19px;
+  }
 }
 .detail-messages.animate{
   opacity:1;
   margin-top:0;
-}
-.detail-messages label{
-  color:#aab8c2;
-  font-weight:600;
-  font-size:12px;
-  text-align:center;
-  margin:15px 0;
-  width:290px;
-  display:block;
-}
-.detail-messages div.message{
-  padding:0 0 30px 58px;
-  clear:both;
-  margin-bottom:45px;
-}
-.detail-messages div.message.right{
-  padding: 0 58px 30px 0;
-  margin-right: -19px;
-  margin-left: 19px;
 }
 .detail-messages .message img{
   float: left;
@@ -2567,85 +2567,6 @@ input[type="range"]::-webkit-slider-thumb {
   width: 30px;
   margin-top: 12px;
 }
-.detail-messages div.message.right img{
-  float: right;
-  margin-left: 0;
-  margin-right: -38px;
-}
-.message .bubble{
-  background:#f0f4f7;
-  font-size:13px;
-  font-weight:600;
-  padding:12px 13px;
-  border-radius:5px 5px 5px 0px;
-  color:#8495a3;
-  position:relative;
-  float:left;
-}
-.detail-messages div.message.right .bubble{
-  float:right;
-  border-radius:5px 5px 0px 5px ;
-}
-.bubble .corner{
-  background:url("../img/bubble-corner.png") 0 0 no-repeat;
-  position:absolute;
-  width:7px;
-  height:7px;
-  left:-5px;
-  bottom:0;
-}
-div.message.right .corner{
-  background:url("../img/bubble-cornerR.png") 0 0 no-repeat;
-  left:auto;
-  right:-5px;
-}
-.bubble span{
-  color: #aab8c2;
-  font-size: 11px;
-  position: absolute;
-  right: 0;
-  bottom: -22px;
-}
-#sendmessage{
-  height:60px;
-  border-top:1px solid #e7ebee;
-  position:absolute;
-  bottom:0;
-  right:0px;
-  width:290px;
-  background:#fff;
-  padding-bottm:50px;
-}
-#sendmessage input{
-  background:#fff;
-  margin:21px 0 0 21px;
-  border:none;
-  padding:0;
-  font-size:14px;
-  font-family:"Open Sans", sans-serif;
-  font-weight:400px;
-  color:#aab8c2;
-}
-#sendmessage input:focus{
-  outline: 0;
-}
-#sendmessage button{
-  background:#fff url("../img/send.png") 0 -41px no-repeat;
-  width:30px;
-  height:30px;
-  position:absolute;
-  right: 15px;
-  top: 23px;
-  border:none;
-}
-#sendmessage button:hover{
-  cursor:pointer;
-  background-position: 0 0 ;
-}
-#sendmessage button:focus{
-  outline: 0;
-}
-
 #close{
   position:absolute;
   top: 8px;
