提示样式背景色修改

--- a/less/editor.less
+++ b/less/editor.less
@@ -1654,7 +1654,7 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   display: none;
   .log-message {
     color: #fff;
-    background-color: rgba(165, 165, 165, 0.42);
+    background-color: #949090;
     padding: 13px;
     height: 40px;
     margin-top: 3px;
@@ -1664,8 +1664,8 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
       position: absolute;
       right: 0;
       // background-color: #222;
-      color:#fff;
-      opacity: .5;
+      //color:#fff;
+      //opacity: .5;
       top: 0;
       cursor: pointer;
       padding: 4px;
