--- a/scripts/components/road/tpls/attr_link_tpl/limitTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/limitTpl.html
@@ -8,7 +8,7 @@
             <div class="list-line"></div>
         </li>
         <li class="list-group-item" ng-repeat="limitItem in linkLimitData.limits" >
-            <div ng-repeat="typeItem in typeOptions|filter:limitItem.type " ng-click="showOrdinaryInfo(limitItem)" style="cursor: pointer;padding-left: 15px;"><label class="control-label" style="cursor: pointer;">{{typeItem.label}}</label></div>
+            <div ng-repeat="typeItem in limitTypeOptions|filter:limitItem.type " ng-click="showOrdinaryInfo(limitItem)" style="cursor: pointer;padding-left: 15px;"><label class="control-label" style="cursor: pointer;">{{typeItem.label}}</label></div>
             <i class="glyphicon glyphicon-remove-circle" ng-click="minusLimit($index,0)"></i>
         </li>
     </ul>
