执行检查table样式

--- a/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
@@ -31,7 +31,7 @@
             <div style="width: 100%;position: absolute; text-align: center;font-size: 16px;font-weight: bold" ng-show="dataLoading" class="row dataLoading">数据加载中...</div>
             <div ng-show="!dataLoading" class="row">
                 <div class="scroll-styled" style="width: 40%;float: left">
-                    <table class="table table-bordered table-condensed fm-console-table">
+                    <table class="table table-bordered table-condensed">
                         <thead>
                         <tr>
                             <th>选择</th>
@@ -52,7 +52,7 @@
                     </table>
                 </div>
                 <div class="scroll-styled" style="width: 58%;float: right;min-height: 200px;max-height: 320px;padding: 0 10px 0 0">
-                    <table class="table table-bordered" style="min-width:800px">
+                    <table class="table table-bordered table-condensed" style="min-width:800px">
                         <thead>
                         <tr>
                             <th>选择</th>
