执行检查按钮删掉

--- a/scripts/components/poi/tpls/edit-tools/optionBarTpl.html
+++ b/scripts/components/poi/tpls/edit-tools/optionBarTpl.html
@@ -75,10 +75,10 @@
                 </button>
             </div>
         </div>
-        <button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-output-btn pull-right" ng-click="startCheckEvent();" style="margin-right: 10px;">
+        <!--<button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-output-btn pull-right" ng-click="startCheckEvent();" style="margin-right: 10px;">
             <i class="fa fa-cog {{checkRunning?'fa-spin':''}}"></i>
             执行检查
-        </button>
+        </button>-->
     </div>
     <div class="fm-console-content dark scroll-styled">
         <div ng-include="tagContentTpl"></div>
