名称信息长度控制

--- a/less/editor.less
+++ b/less/editor.less
@@ -2526,6 +2526,7 @@ input[type="range"]::-webkit-slider-thumb {
   height:197px;
   overflow-y:auto;
   overflow-x:hidden;
+  word-wrap: break-word;
   font-size: 13px;
   font-weight: 600;
   line-height: 2;
