--- a/scripts/components/road/tpls/attr_lc_tpl/nameInfoTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/nameInfoTpl.html
@@ -22,8 +22,9 @@
                 名称组
                 <span ng-bind="item[0].nameGroupid" style="line-height: 2.5;"></span>
                 <span class="info-option info-remove-ico pull-right" ng-click="removeNameInfo(item[0])"> × </span>
-                <span class="glyphicon glyphicon-menu-down info-option pull-right" ng-click="changeOrder(item,1)" title="下移" ng-if="$index!=details[0].names.length-1"></span>
+                <span class="glyphicon glyphicon-menu-down info-option pull-right" ng-click="changeOrder(item,1)" title="下移" ng-if="$index!=names.length-1"></span>
                 <span class="glyphicon glyphicon-menu-up info-option pull-right" ng-click="changeOrder(item,2)" title="上移" ng-if="$index!=0"></span>
+                <span class="glyphicon glyphicon-plus info-option pull-right" ng-click="changeOrder(item,3)" title="增加"></span>
             </div>
             <div class="name-group-item" ng-repeat="nameObj in item">
                 <span class="info-option-item info-remove-ico pull-right" ng-click="removeNameItem(nameObj)"> × </span>
