--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -5,6 +5,7 @@
     <button class="fm-top-btn select-face" title="选择面" ng-click="selectShape('face')"></button>
     <button class="fm-top-btn blank eng" title="选择Tips" ng-click="selectShape('tips')">Tip</button>
     <button class="fm-top-btn blank" title="选择关系" ng-click="selectShape('relation')">关</button>
+    <button class="fm-top-btn blank" title="选择All" ng-click="selectShape('all')">All</button>
 </div>
 <div class="fm-top-btn split"></div>
 <div class="fm-top-btn-group">
@@ -195,6 +196,7 @@
             <li><a href="#" ng-click="openAdvancedToolsPanel('search')">搜 索</a></li>
             <!--<li><a href="#">检 查</a></li>-->
             <li><a href="#" ng-click="openSpecialWorkPanelTpl()">道路名作业</a></li>
+            <li><a href="#" ng-click="thematicMapChange()">FC专题图 <i class="glyphicon glyphicon-ok pull-right" ng-show="thematicMapShow"></i></a></li>
             <li role="presentation" class="divider"></li>
             <li><a href="#" ng-click="linkChecked=!linkChecked">捕捉线 <i class="glyphicon glyphicon-ok pull-right" ng-if="linkChecked"></i></a></li>
             <li><a href="#" ng-click="nodeChecked=!nodeChecked">捕捉点 <i class="glyphicon glyphicon-ok pull-right" ng-show="nodeChecked"></i></a></li>
