--- a/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
@@ -31,7 +31,7 @@
             <div><label class="control-label">顺向速度</label></div>
             <div class="inline">
                 <input type="text"
-                       placeholder="0530" id="{{oridiData.rowid}}fromSpeedLimit" ng-change="changeClass(oridiData,2)"
+                       placeholder="0530" id="{{oridiData.rowid}}fromSpeedLimit" ng-change="changeClass(oridiData,2)" ng-blur="hideDirect()" ng-focus="showDirect(2)"
                        ng-model="oridiData.fromSpeedLimit" ng-disabled="rticDir ==3">
             </div>
         </li>
@@ -39,7 +39,7 @@
             <div><label class="control-label">逆向速度</label></div>
             <div class="inline">
                 <input type="text"
-                       placeholder="0530" id="{{item.rowid}}toSpeedLimit" ng-change="changeClass(oridiData,3)"
+                       placeholder="0530" id="{{item.rowid}}toSpeedLimit" ng-change="changeClass(oridiData,3)" ng-blur="hideDirect()" ng-focus="showDirect(3)"
                        ng-model="oridiData.toSpeedLimit" ng-disabled="rticDir ==2">
             </div>
         </li>
