解决lcNode点不能增加问题

--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -37,7 +37,7 @@
                         <button class="fm-top-btn blank" title="制作行政区划面的组成线节点" ng-controller="addNodeFeatureCtrl" ng-click="addNode('ADNODE')">政</button>
                         <button class="fm-top-btn blank eng" title="制作Zone面的组成线节点" ng-controller="addNodeFeatureCtrl" ng-click="addNode('ZONENODE')">ZN</button>
                         <button class="fm-top-btn blank eng" title="制作土地利用面的组成线节点" ng-controller="addNodeFeatureCtrl" ng-click="addNode('LUNODE')">LU</button>
-                        <button class="fm-top-btn blank eng" title="制作土地覆盖面的组成线节点" ng-controller="addNodeFeatureCtrl" ng-click="addNode('LCNENODE')">LC</button>
+                        <button class="fm-top-btn blank eng" title="制作土地覆盖面的组成线节点" ng-controller="addNodeFeatureCtrl" ng-click="addNode('LCNODE')">LC</button>
                     </div>
                 </div>
             </li>
