--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -198,8 +198,8 @@
             <li><a href="#" ng-click="openSpecialWorkPanelTpl()">道路名作业</a></li>
             <li><a href="#" ng-click="thematicMapChange()">FC专题图 <i class="glyphicon glyphicon-ok pull-right" ng-show="thematicMapShow"></i></a></li>
             <li role="presentation" class="divider"></li>
-            <li><a href="#" ng-click="linkChecked=!linkChecked">捕捉线 <i class="glyphicon glyphicon-ok pull-right" ng-if="linkChecked"></i></a></li>
-            <li><a href="#" ng-click="nodeChecked=!nodeChecked">捕捉点 <i class="glyphicon glyphicon-ok pull-right" ng-show="nodeChecked"></i></a></li>
+            <li><a href="#" ng-click="changeLayerSnap('link')">捕捉线 <i class="glyphicon glyphicon-ok pull-right" ng-if="linkChecked"></i></a></li>
+            <li><a href="#" ng-click="changeLayerSnap('node')">捕捉点 <i class="glyphicon glyphicon-ok pull-right" ng-show="nodeChecked"></i></a></li>
             <!--<li><a href="#" ng-click="isLinkTrack=!isLinkTrack">追踪选择 <i class="glyphicon glyphicon-ok pull-right" ng-show="isLinkTrack"></i></a></li>-->
         </ul>
     </div>
