--- a/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
+++ b/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
@@ -14,6 +14,14 @@
                         </div>
                     </li>
                     <li>
+                        <label class="control-label">来源标识</label>
+                        <div>
+                            <select ng-model="electronicEyeData.srcFlag" class="chosen-disabled"
+                                    ng-options="value.id as value.label for value in srcFlagOption" disabled>
+                            </select>
+                        </div>
+                    </li>
+                    <li>
                         <label class="control-label">电子眼方位</label>
                         <div>
                             <label>
