--- a/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
+++ b/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
@@ -103,7 +103,7 @@
                     <li>
                         <label class="control-label">图幅号码</label>
                         <div>
-                            <input type="text" ng-model="electronicEyeData.meshId"/>
+                            <input type="text" ng-model="electronicEyeData.meshId" class="chosen-disabled" disabled/>
                         </div>
                     </li>
                     <li>
