--- a/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
+++ b/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
@@ -97,7 +97,7 @@
                     <li>
                         <label class="control-label">照射角度</label>
                         <div>
-                            <input type="text" ng-model="electronicEyeData.angle"/>
+                            <input type="text" ng-model="electronicEyeData.angle" class="chosen-disabled" disabled/>
                         </div>
                     </li>
                     <li>
