--- a/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
@@ -46,7 +46,7 @@
         <li class="list-group-item">
             <div><label class="control-label">顺向来源</label></div>
             <div class="inline">
-                <select ng-model="item.fromLimitSrc"
+                <select ng-model="oridiData.fromLimitSrc"
                         ng-options="value.id as value.label for value in fromLimitSrcOption" ng-disabled="rticDir ==3">
                     <option>--</option>
                 </select>
@@ -55,7 +55,7 @@
         <li class="list-group-item">
             <div><label class="control-label">逆向来源</label></div>
             <div class="inline">
-                <select ng-model="item.toLimitSrc"
+                <select ng-model="oridiData.toLimitSrc"
                         ng-options="value.id as value.label for value in fromLimitSrcOption" ng-disabled="rticDir ==2">
                     <option>--</option>
                 </select>
