--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1006,6 +1006,7 @@ a.fm-panel-controlArrowRight > span {
   float: right;
   margin-right: 5px;
   margin-top: 5px;
+  z-index: 100;
 }
 .remove-preview-img:hover {
   color: #fff;
