--- a/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
+++ b/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
@@ -108,7 +108,7 @@
                         </li>
                         <li class="list-group-item">
                             <ul ng-repeat="namesItem in nameGroup | orderBy:'nameGrouppid'" class="list-group child-list-ul list-group-lg m-b-none">
-                                <li class="list-group-item" ng-repeat="item in namesItem">
+                                <li class="list-group-item" ng-repeat="item in namesItem  | orderBy:'nameId'">
                                     <label class="control-label fm-cursor" ng-click="showCrossNames($index ,namesItem,item.nameGroupid);" ng-bind="item.name"></label>
                                     <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index,item)"></i>
                                 </li>
